fix:list methods
